--- a/open-voice.pe.yaml
+++ b/open-voice.pe.yaml
@@ -191,9 +191,10 @@ select:
     name: "TTS target media player"
     id: tts_target_media_player_select
     options:
-      - "media_player.living_room"
-      - "media_player.kitchen"
-      - "media_player.bedroom"
+      - "media_player.home_assistant_voice_09d508_media_player"
+      - "media_player.vlc_telnet"
+      - "media_player.woonkamer_2"
+      - "media_player.chromecast8906"
     restore_value: true
     entity_category: config
     optimistic: true
